# schedule-weather-printer

./: .gitignore  README.md  SPEC.md  config.example.json  pyproject.toml  weather-gift
assets/: art.json  greetings.json  messages.json  special_days.json
src/weather-gift/: __main__.py  cli.py  config.py  content.py  fixtures.py  format.py  main.py  output.py  scheduler.py  weather.py
tests/: test_cli.py  test_config.py  test_content.py  test_fixtures.py  test_format.py  test_main.py  test_output.py  test_scheduler.py  test_weather.py
