[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-gift"
version = "0.1.0"
description = "Local app that generates scheduled weather-based message cards."
requires-python = ">=3.11"

[project.scripts]
weather-gift = "weather_gift.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
